--- a/templates/folha/visualizar.html.twig
+++ b/templates/folha/visualizar.html.twig
@@ -6,6 +6,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <style>
+        @media print
+        {
+            .no-print, .no-print *
+            {
+                display: none !important;
+            }
+
+
+            body {
+                color: black;
+                font-size: 0.6em;
+            }
+
+            a {
+                color: black;
+            }
+
+        }
+
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -43,8 +62,27 @@
             color: #008000; /* Green color for update icon */
             cursor: pointer;
         }
+        dl {
+            text-align: left;
+            margin-bottom: 20px;
+        }
+
+        dt {
+            font-weight: bold;
+        }
+
+        dd {
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
     </style>
 <div>
+    <div class="print">
+        <dl>
+            <dt>Funcionário:</dt>
+            <dd>{{ funcionario.nome }}</dd>
+        </dl>
+    </div>
     <table>
         <tbody>
         {% set sum = 0 %}
@@ -59,7 +97,7 @@
                     <td>
                         {{ registro.dataRegistro.format('H:i') }}
                         <!-- Delete Link -->
-                        <a href="{{ url('excluir_registro_ponto', {id: registro.id}) }}" class="delete-icon">
+                        <a href="{{ url('excluir_registro_ponto', {id: registro.id}) }}" class="delete-icon no-print">
                             <i class="fas fa-trash-alt"></i> <!-- Font Awesome delete icon -->
                         </a>
                     </td>
@@ -70,11 +108,11 @@
                     <td>Total do dia:</td>
                     <td>{{ dia.total|minutos }} ({{ (dia.total-(8*60))|minutos }})</td>
                     {% set sum = sum + dia.total - (8*60) %}
-                    <td>Total acumulado:</td>
-                    <td>{{ sum|minutos }}</td>
+                    <td class="no-print">Total acumulado:</td>
+                    <td class="no-print">{{ sum|minutos }}</td>
                 {% else %}
-                    <td>Tempo estimado de saída</td>
-                    <td>{{ dia.valores|tempoRestante }}</td>
+                    <td class="no-print">Tempo estimado de saída</td>
+                    <td class="no-print">{{ dia.valores|tempoRestante }}</td>
                 {% endif %}
 
             </tr>
@@ -83,8 +121,8 @@
         </tbody>
 
     </table>
-    <div><h3>Tempo total acumulado:{{ tempoTotal|minutos }}</h3></div>
-    <div>
+    <div class="no-print"><h3>Tempo total acumulado:{{ tempoTotal|minutos }}</h3></div>
+    <div class="no-print">
         <form method="POST">
             <input type="datetime-local" value="{{ "now"|date("Y-m-d\\TH:i") }}" name="data" />
             <input type="submit" value="Adicionar registro">
