removendo registro de ponto

--- a/templates/folha/visualizar.html.twig
+++ b/templates/folha/visualizar.html.twig
@@ -79,6 +79,8 @@
 <div>
     <div class="print">
         <dl>
+            <dt>Empregador:</dt>
+            <dd>{{ empregador.nome }} ({{ empregador.cpf }})</dd>
             <dt>Funcionário:</dt>
             <dd>{{ funcionario.nome }}</dd>
         </dl>
