removendo registro de ponto

--- a/templates/vale_transporte/visualizar.html.twig
+++ b/templates/vale_transporte/visualizar.html.twig
@@ -41,9 +41,10 @@
     {%  set valorTotal = (vale_transporte.custoDiarioPassagem/100) * vale_transporte.quantidadeDias %}
     <p>
         Eu, <span class="negrito">{{ funcionario.nome }}</span>, declaro ter recebido do Sr(a), <span class="negrito">{{ empregador.nome }}</span>,
-        o valor de <span class="negrito">R$ {{ valorTotal|number_format(2, ',','.') }} ({{ valorTotal|numeroPorExtenso }})</span>. Considerando-se o valor diário de passagem de
+        o valor de <span class="negrito">R$ {{ valorTotal|number_format(2, ',','.') }} ({{ valorTotal|numeroPorExtenso }})</span>. Considerando-se o valor di&aacute;
+        rio de passagem de
         <span class="negrito">R$ {{ (vale_transporte.custoDiarioPassagem/100)|number_format(2, ',','.') }} ({{ (vale_transporte.custoDiarioPassagem/100)|numeroPorExtenso }})</span> e <span class="negrito">
-            {{ vale_transporte.quantidadeDias }} dias a serem trabalhados</span>. Referentes ao mês de <span class="negrito">{{ attribute(meses, vale_transporte.mes) }} de {{ vale_transporte.ano }}.
+            {{ vale_transporte.quantidadeDias }} dias a serem trabalhados</span>. Referentes ao m&ecirc;s de <span class="negrito">{{ attribute(meses, vale_transporte.mes) }} de {{ vale_transporte.ano }}.
         </span>
     </p>
     <br />
@@ -56,7 +57,7 @@
     </div>
     <br />
     <p>
-        Brasília, {{ "now"|date("d") }} de {{ "now"|date("F")|trans({}, 'messages', 'pt_BR') }} de {{ "now"|date("Y") }}
+        Bras&iacute;lia, {{ "now"|date("d") }} de {{ "now"|date("F")|trans({}, 'messages', 'pt_BR') }} de {{ "now"|date("Y") }}
     </p>
 {% endblock %}
 
